<resources>
    <string name="app_name">FoodEase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="click_to_login">Click here to log in</string>
    <string name="click_to_register"> Not registered ? Click here to register</string>
    <string name="logout">Logout</string>
    <string name="tagline">Ordering Food became easy</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_profile">View Profile</string>
    <string name="spce_mess">SPCE Mess</string>
    <string name="appLogo">appLogo</string>
    <string name="addDishes">Click Here to Add a Dish</string>
    <string name="addCategories">Click Here to Add a Category</string>
    <string name="addtoCart">ADD TO CART</string>
    <string name="dish_description">Dish Description</string>
    <string name="dish_name">Dish Name</string>
    <string name="dishPrice">Rs 10.00</string>
    <string name="dishQuantity">1</string>
    <string name="dish_image">Dish Image</string>
    <string name="app_description">Welcome to FoodEase, the ultimate solution for hassle-free pre-ordering of delicious meals from your college mess or canteen. With our innovative timeslot-based takeaway service, you can conveniently place your food orders in advance, ensuring that your meals are ready exactly when you need them.</string>
    <string name="developer_information">Developer Information</string>
    <string name="developerName">Palash Mahajan</string>
    <string name="roleNum1">Role: Developer</string>
    <string name="DevEmail">Email: palashmahajan22@gmail.com</string>
    <string name="designerName1">Yash Kambli</string>
    <string name="role2">Role: Designer</string>
    <string name="designerName2">Aadit Jha</string>
    <string name="versionInfo">Version 1.0</string>
    <string name="owner_text">Owner</string>
    <string name="customer_text">Customer</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="submit">Login</string>
    <string name="appname">FoodEase</string>
    <string name="view_cart_option">View Cart</string>
    <string name="remove_dish_from_cart">remove dish</string>
    <string name="btn_content_description">btn</string>
    <string name="time_slot_header_line">Before proceeding to checkout, please select the time slot suitable to you</string>
    <string name="add_btn_desc">addOnClick</string>
    <string name="minus_btn_desc">minusOnClick</string>
    <string name="contact_input">Enter your contact number</string>
    <string name="name_input">Enter your name</string>
    <string name="register_header">Registration</string>
    <string name="vendor_home_page">Vendor Home Page</string>
    <string name="logout_btn">Logout</string>
    <string name="vendor_analytics">Your analytics</string>
    <string name="vendor_pending_orders">Pending Orders</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>

</resources>
