<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Image -->
        <ImageView
            android:id="@+id/imageViewItem"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/uploading"
            android:scaleType="centerCrop"
            android:contentDescription="@string/dish_image" />

        <!-- Quantity Selector -->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/imageButtonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/minus_solid"/>

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dishQuantity"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingHorizontal="8dp" />

            <ImageButton
                android:id="@+id/imageButtonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add"/>

            <!-- Price -->
            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dishPrice"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end" />

        </LinearLayout>
            <TextView
                android:layout_gravity="center"
                android:padding="10dp"
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dish_description"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="16dp" />
        <!-- Add to Cart Button -->
        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtoCart"
            android:textColor="@color/black"
            android:background="@drawable/btn_rounded_corner"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.cardview.widget.CardView>