<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Registration">


    <Button
        android:id="@+id/btn_register"
        android:layout_width="186dp"
        android:layout_height="66dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#FF5722"
        android:shadowColor="#00FFFFFF"
        android:shadowRadius="9"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_reg"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/loginNow"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/concert_one"
        android:gravity="center"
        android:text="Click to Login"
        android:textColor="#121010"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="440dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/MyHintTextAppearance"
        app:hintTextColor="#FF4900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:suffixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/epilogue_semibold"
            android:gravity="start|center_vertical"
            android:hint="@string/name_input"
            android:inputType="textPersonName"
            android:outlineProvider="none"
            android:padding="16dp"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="332dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#FF4900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        app:layout_constraintVertical_bias="0.244"
        app:placeholderTextColor="#070707"
        app:prefixTextColor="#F30606"
        app:suffixTextColor="#000000"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_contact_mail_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/epilogue_semibold"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="#FDD835"
            android:textColorHint="#757575"
            android:textColorLink="#4CFF00"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/MyHintTextAppearance"
        app:hintTextColor="#FF4900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_reg"
        app:suffixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/call_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/epilogue_semibold"
            android:gravity="start|center_vertical"
            android:hint="@string/contact_input"
            android:inputType="phone|number"
            android:outlineProvider="none"
            android:padding="16dp"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="220dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:endIconTint="#090909"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#FF4900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#191818"
        app:passwordToggleTintMode="src_in"
        app:placeholderTextColor="#070707"
        app:prefixTextColor="#F30606"
        app:startIconScaleType="fitStart"
        app:startIconTint="#000000"
        app:suffixTextColor="#000000"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:drawingCacheQuality="low"
            android:fontFamily="@font/epilogue_semibold"
            android:foregroundTint="#000000"
            android:hint="@string/password"
            android:inputType="text|textPassword|textNoSuggestions"
            android:password="true"
            android:phoneNumber="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="#FDD835"
            android:textColorHint="#757575"
            android:textColorLink="#4CFF00"
            android:textSize="18sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="196dp"
        android:layout_height="160dp"
        android:src="@drawable/foodease"
        app:layout_constraintBottom_toTopOf="@+id/nameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="10dp"
        android:layout_height="43dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_reg" />

    <FrameLayout
        android:layout_width="414dp"
        android:layout_height="70dp"
        android:background="@color/light_orange"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/cinzel_decorative_bold"
            android:text="@string/register_header"
            android:textColor="@color/dark_orange"
            android:textSize="34sp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>