<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Login">


    <Button
        android:id="@+id/btn_login"
        android:layout_width="186dp"
        android:layout_height="66dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/dark_orange"
        android:shadowColor="#00FFFFFF"
        android:shadowRadius="9"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_enter" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="494dp"
        android:layout_height="326dp"
        android:src="@drawable/foodease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="327dp"
        android:layout_height="47dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="Don't have an account? Register here!"
        android:textColor="#121010"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#FF4900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:placeholderTextColor="#070707"
        app:prefixTextColor="#F30606"
        app:suffixTextColor="#000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="#FDD835"
            android:textColorHint="#757575"
            android:textColorLink="#4CFF00"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_enter"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:textColorHint="#000000"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#000000"
        app:cursorColor="#000000"
        app:endIconTint="#090909"
        app:helperTextTextColor="#000000"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#FF4900"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_enter"
        app:layout_constraintVertical_bias="0.26"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#191818"
        app:passwordToggleTintMode="src_in"
        app:placeholderTextColor="#070707"
        app:prefixTextColor="#F30606"
        app:startIconScaleType="fitStart"
        app:startIconTint="#000000"
        app:suffixTextColor="#000000"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:drawingCacheQuality="low"
            android:foregroundTint="#000000"
            android:hint="@string/password"
            android:inputType="text|textPassword|textNoSuggestions"
            android:password="true"
            android:phoneNumber="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="#FDD835"
            android:textColorHint="#757575"
            android:textColorLink="#4CFF00"
            android:textSize="18sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="42dp"
        android:layout_height="92dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/pass_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_enter" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="552dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loginheader" />


</androidx.constraintlayout.widget.ConstraintLayout>